[gd_scene load_steps=7 format=3 uid="uid://fy40aoeru5ut"]

[ext_resource type="Script" path="res://scripts/StageSelect.gd" id="1_jkphu"]
[ext_resource type="Texture2D" uid="uid://belh2j4spbyqj" path="res://assets/images/background_welcome.png" id="2_8b6xo"]
[ext_resource type="FontFile" uid="uid://c0apde5o5da0g" path="res://assets/fonts/PublicPixel.ttf" id="3_ret2d"]
[ext_resource type="Texture2D" uid="uid://cp2asflio46wm" path="res://assets/images/rhythm_minigame_banner.png" id="4_sha5h"]
[ext_resource type="Texture2D" uid="uid://bolkcjq85c62m" path="res://assets/images/act1.png" id="5_r20bb"]
[ext_resource type="PackedScene" uid="uid://g3ygspw556v2" path="res://scenes/button.tscn" id="6_dqlmp"]

[node name="MinigamesSelect" type="CanvasLayer"]
script = ExtResource("1_jkphu")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 269)
scale = Vector2(1.907, 1.907)
texture = ExtResource("2_8b6xo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RhythmMinigameButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 201.0
offset_top = 265.0
offset_right = 709.0
offset_bottom = 528.0
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("3_ret2d")
theme_override_font_sizes/font_size = 32
text = "Rhythm Minigame"
icon = ExtResource("4_sha5h")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="BarmanMinigameButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 563.0
offset_top = 265.0
offset_right = 1071.0
offset_bottom = 528.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("3_ret2d")
theme_override_font_sizes/font_size = 32
text = "Barman Minigame"
icon = ExtResource("5_r20bb")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="button" parent="Control" instance=ExtResource("6_dqlmp")]
position = Vector2(573, 574)
button_text = "Back to start"

[node name="MinigamesTitle" type="Label" parent="."]
offset_left = 401.0
offset_top = 120.0
offset_right = 770.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0.839216, 0.407843, 0.819608, 1)
theme_override_colors/font_outline_color = Color(0.588235, 0.709804, 0.764706, 1)
theme_override_fonts/font = ExtResource("3_ret2d")
theme_override_font_sizes/font_size = 41
text = "Minigames
"

[connection signal="pressed" from="Control/RhythmMinigameButton" to="." method="rhythm_minigame_button_pressed"]
[connection signal="pressed" from="Control/BarmanMinigameButton" to="." method="_on_barman_minigame_button_pressed"]
[connection signal="OnButtonPressed" from="Control/button" to="." method="_on_back_to_start_button_pressed"]
